test(perf-bench): make Andorra JMH benches runnable + tune params
Wires the osm/Andorra*Bench harnesses through to maven-surefire and
records the parameter choices used for the 2026-05 wiki refresh:

* `jgrapht-core/pom.xml` — adds the `org.jgrapht.perf.shortestpath.osm`
  and `org.jgrapht.perf.shortestpath.osm.jmh_generated` packages to the
  surefire `<argLine>` (both `--add-exports` and `--add-opens`) so the
  JMH-generated shim classes can be reflected into from the unnamed
  module.
* Each bench class — `@Fork(value=1, jvmArgs={--add-opens/exports})`
  for the same packages; `AndorraBenchmarkRunner` passes `forks(0)` so
  the surefire argLine is inherited and the jgrapht-core module stays
  on the runtime classpath.
* `AndorraBoundedPrunedYenBench` — `k ∈ {1, 5}` and 3 random queries
  per call (was 20, k up to 25). Classical Yen at k = 5 already costs
  ~2.5 s per call on Andorra; the smaller grid keeps the bench under
  ~4 min wall.
* `AndorraDijkstraManyToManyGetPathsBench` — `@BenchmarkMode(SingleShotTime)`
  with 0 warmup + 1 measurement iteration; `n = 2`. The pre-PR-#1340
  implementation of `getPaths(V)` iterates `graph.vertexSet()` (36,618
  vertices on Andorra) and runs a Dijkstra per vertex, so a single
  call already costs ~3.5 minutes — average-time multi-iteration mode
  is not workable on this branch.
* `AndorraAllDirectedPathsNonSimpleBench` — relaxed subgraph carving:
  search up to 400 random anchors, accept any BFS ball of ≥ 8 vertices
  with a sink ≥ 2 hops away, then keep the largest ball under 1500
  vertices. The committed seed (13) lands on a 29-vertex ball;
  follow-ups will widen this with a denser anchor.
* `AndorraBenchmarkRunner` — three `@Test` methods (`runYen`, `runM2M`,
  `runADP`) build a JMH `OptionsBuilder` and write the per-bench TEXT
  summary to `target/jmh-andorra/<name>.txt`. The class is named
  `*Runner` (not `*Test`) so surefire's default include pattern skips
  it; explicit invocation via
  `mvn -pl jgrapht-core test